# lol-draft-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: config.py  logging_config.py  main.py  worker.py
backend/app/db/: connection.py  repository.py  schema.py
backend/app/domain/: bridge.py  draft.py  ranks.py  recommendation.py  regions.py  roles.py  settings.py
backend/app/providers/: base.py  lolalytics_provider.py
backend/app/routers/: admin.py  bridge.py  data.py  draft.py  recommend.py  settings.py  status.py
backend/app/services/: champion_sync.py  draft_state_builder.py  explanation_builder.py  lcu_connector.py  recommendation_service.py  role_inference.py  runtime_state.py  scheduler.py  scoring.py  scoring_constants.py  scraper_orchestrator.py  session_registry.py
backend/app/ws/: draft_ws.py
backend/tests/: test_admin_router.py  test_bridge_client.py  test_draft_router.py  test_draft_state_builder.py  test_draft_ws.py  test_lcu_connector.py  test_logging_config.py  test_provider.py  test_recommendation.py  test_repository.py  test_retry.py  test_runtime_state.py  test_scraper_orchestrator.py  test_settings_router.py  test_status_router.py
bridge/: bridge_client.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ops/: Caddyfile  backup.sh  docker-compose.hetzner.yml  docker-compose.tailscale.yml
scripts/: bootstrap.py  full_refresh.py  run.py  run_bridge.py  run_worker.py  start-cloud-client.cmd  start-cloud-client.ps1
(+29 files in other folders)
