[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lol-draft-assistant-backend"
version = "0.1.0"
description = "Local draft assistant backend for League of Legends."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "aiohttp>=3.11.0",
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-slugify>=8.0.4",
  "uvicorn[standard]>=0.34.0",
  "playwright>=1.51.0",
  "apscheduler>=3.10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
